--- a/_sass/_toc.scss
+++ b/_sass/_toc.scss
@@ -16,8 +16,4 @@
     margin-left: 10px;
     margin-top: 6px;
   }
-
-  & > ul > li + li {
-    margin-top: 20px;
-  }
 }
